--- a/yamaha-youth/src/css/school.css
+++ b/yamaha-youth/src/css/school.css
@@ -123,6 +123,9 @@ body {
   padding-right: calc(var(--bs-gutter-x) * 0.5);
   padding-left: calc(var(--bs-gutter-x) * 0.5);
 }
+#school-content .section-container .wrap-content .kategori-mobile {
+  padding-left: calc(var(--bs-gutter-x) * 1.5);
+}
 #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile {
   overflow-x: auto;
   white-space: nowrap;
@@ -266,7 +269,7 @@ body {
 @media (min-width: 0px) and (max-width: 575px) {
   body {
     height: 100vh;
-    background-image: url("../../assets/images/school-competition/bg-school.jpg");
+    background-image: url("../../assets/images/school-competition/bg-school-mobile.jpg");
     background-position: top;
     background-size: cover;
     background-repeat: none;
@@ -374,8 +377,8 @@ body {
     padding-left: calc(var(--bs-gutter-x) * 0.5);
   }
   #school-content .section-container .wrap-content .content {
-    padding-right: calc(var(--bs-gutter-x) * 0.5);
-    padding-left: calc(var(--bs-gutter-x) * 0.5);
+    padding-right: calc(var(--bs-gutter-x) * 1.5);
+    padding-left: calc(var(--bs-gutter-x) * 1.5);
   }
   #school-content .section-container .wrap-content .content .wrap .title {
     background: #5180a2;
