--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -410,7 +410,7 @@ body {
 
           .destination {
             position: relative;
-            height: 478px;
+            height: 458px;
             width: 100%;
 
             .wrap-destination {
@@ -527,6 +527,39 @@ body {
             max-width: 100%;
             padding-right: calc(var(--bs-gutter-x) * 0.5);
             padding-left: calc(var(--bs-gutter-x) * 0.5);
+          }
+        }
+
+        .kategori-mobile {
+          padding-left: calc(var(--bs-gutter-x) * 1.5);
+          .wrap-kategori-mobile {
+            overflow-x: auto;
+            white-space: nowrap;
+
+            #social-media-share{
+              margin-bottom: 1rem !important;
+            }
+  
+            .box {
+              display: ruby;
+              float: none;
+  
+              a {
+                text-decoration: none;
+                cursor: pointer;
+  
+                .kategori {
+                  font-size: 14px;
+                  font-weight: 500;
+                  background: #b4dbf5;
+                  border-radius: 8px;
+                  text-transform: uppercase;
+                  color: #5180a2;
+                  padding: 10px 10px;
+                  margin: 10px 0;
+                }
+              }
+            }
           }
         }
 
