--- a/yamaha-youth/src/css/school.css
+++ b/yamaha-youth/src/css/school.css
@@ -94,7 +94,7 @@ body {
 }
 #school-content .section-container .wrap-content .left-side #sosmed {
   position: absolute;
-  top: 436px;
+  top: 438px;
   width: 100%;
 }
 #school-content .section-container .wrap-content .left-side #sosmed #social-media-share {
@@ -103,7 +103,7 @@ body {
 }
 #school-content .section-container .wrap-content #wrap-kategori {
   position: absolute;
-  top: 460px;
+  top: 510px;
   width: 100%;
   height: 100vh;
 }
@@ -126,7 +126,7 @@ body {
   top: 0;
   margin-top: 120px;
   flex: 0 0 auto;
-  width: 26%;
+  width: 27%;
   display: flex;
   max-width: 100%;
   padding-right: calc(var(--bs-gutter-x) * 0.5);
@@ -144,7 +144,7 @@ body {
   white-space: nowrap;
 }
 #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile .box {
-  display: ruby;
+  display: flex;
   float: none;
 }
 #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile .box a {
@@ -160,6 +160,7 @@ body {
   color: #5180a2;
   padding: 10px 10px;
   margin: 10px 0;
+  margin-right: 6px;
 }
 #school-content .section-container .wrap-content .content .wrap .title {
   background: #5180a2;
@@ -401,7 +402,7 @@ body {
     margin-top: 4rem !important;
   }
   #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile .box {
-    display: ruby;
+    display: flex;
     float: none;
   }
   #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile .box a {
@@ -417,6 +418,7 @@ body {
     color: #5180a2;
     padding: 10px 10px;
     margin: 10px 0;
+    margin-right: 6px;
   }
   #school-content .section-container .wrap-content .content {
     padding-right: calc(var(--bs-gutter-x) * 1.5);
@@ -687,7 +689,7 @@ body {
   }
   #school-content .section-container .wrap-content .left-side .destination {
     position: absolute;
-    height: 80vh;
+    height: 502px;
     width: 100%;
   }
   #school-content .section-container .wrap-content .left-side .destination .wrap-destination {
@@ -757,9 +759,18 @@ body {
     padding: 10px 10px;
     margin: 10px 0;
   }
+  #school-content .section-container .wrap-content .left-side #sosmed {
+    position: absolute;
+    top: 487px;
+    width: 100%;
+  }
+  #school-content .section-container .wrap-content .left-side #sosmed #social-media-share {
+    margin-left: auto;
+    margin-right: auto;
+  }
   #school-content .section-container .wrap-content #wrap-kategori {
     position: absolute;
-    top: 510px;
+    top: 556px;
     width: 100%;
     height: 100vh;
   }
@@ -793,7 +804,7 @@ body {
     white-space: nowrap;
   }
   #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile .box {
-    display: ruby;
+    display: flex;
     float: none;
   }
   #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile .box a {
@@ -877,5 +888,275 @@ body {
     margin: 25px 0 20px 0;
     height: 20px;
     text-align: center;
+  }
+}
+@media (min-width: 1200px) and (max-width: 2000px) {
+  #school-content {
+    margin-top: 120px;
+    margin-bottom: 120px;
+  }
+  #school-content .section-container .wrap-content {
+    height: auto;
+  }
+  #school-content .section-container .wrap-content .left-side {
+    position: relative;
+  }
+  #school-content .section-container .wrap-content .left-side .destination {
+    position: absolute;
+    height: 80vh;
+    width: 100%;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination {
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota {
+    position: relative;
+    height: 180px;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota img {
+    border-radius: 20px;
+    width: 100%;
+    object-fit: cover;
+    height: 300px;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc {
+    position: absolute;
+    top: 110px;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .logo-wrap img {
+    max-width: 267px;
+    height: unset;
+    object-fit: unset;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .about-destination {
+    margin-top: 30px;
+    background: #b4dbf5;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 8px;
+    padding: 12px;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .about-destination .title {
+    color: #5180a2;
+    height: 100%;
+    padding-top: 10px;
+    padding-bottom: 2px;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .about-destination .title h4 {
+    font-size: 20px;
+    font-family: "gill-sans-1000", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .about-destination .title .captions {
+    background: #fff;
+    margin: 10px;
+    border-radius: 8px;
+    margin: 10px 0;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .about-destination .title .captions p {
+    font-size: 12px;
+    line-height: normal;
+    padding: 10px;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .wrap-kategori a {
+    text-decoration: none;
+    cursor: pointer;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .wrap-kategori a .kategori {
+    font-size: 14px;
+    font-weight: 500;
+    background: #b4dbf5;
+    border-radius: 8px;
+    text-transform: uppercase;
+    color: #5180a2;
+    padding: 10px 10px;
+    margin: 10px 0;
+  }
+  #school-content .section-container .wrap-content .left-side #sosmed {
+    position: absolute;
+    top: 436px;
+    width: 100%;
+  }
+  #school-content .section-container .wrap-content .left-side #sosmed #social-media-share {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #school-content .section-container .wrap-content #wrap-kategori {
+    position: absolute;
+    top: 510px;
+    width: 100%;
+    height: 100vh;
+  }
+  #school-content .section-container .wrap-content #wrap-kategori a {
+    text-decoration: none;
+    cursor: pointer;
+  }
+  #school-content .section-container .wrap-content #wrap-kategori a .kategori {
+    font-size: 14px;
+    font-weight: 500;
+    background: #b4dbf5;
+    border-radius: 8px;
+    text-transform: uppercase;
+    color: #5180a2;
+    padding: 10px 10px;
+    margin: 10px 0;
+  }
+  #school-content .section-container .wrap-content #wrap-kategori.fixed {
+    position: fixed;
+    top: 0;
+    margin-top: 120px;
+    flex: 0 0 auto;
+    width: 27%;
+    display: flex;
+    max-width: 100%;
+    padding-right: calc(var(--bs-gutter-x) * 0.5);
+    padding-left: calc(var(--bs-gutter-x) * 0.5);
+  }
+  #school-content .section-container .wrap-content #sosmed-mobile {
+    padding-top: 35px;
+    padding-bottom: 8px;
+  }
+  #school-content .section-container .wrap-content .kategori-mobile {
+    padding-left: calc(var(--bs-gutter-x) * 1.5);
+  }
+  #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile {
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+  #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile .box {
+    display: flex;
+    float: none;
+  }
+  #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile .box a {
+    text-decoration: none;
+    cursor: pointer;
+  }
+  #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile .box a .kategori {
+    font-size: 14px;
+    font-weight: 500;
+    background: #b4dbf5;
+    border-radius: 8px;
+    text-transform: uppercase;
+    color: #5180a2;
+    padding: 10px 10px;
+    margin: 10px 0;
+    margin-right: 6px;
+  }
+  #school-content .section-container .wrap-content .content .wrap .title {
+    background: #5180a2;
+    color: #fff;
+    padding: 10px 10px;
+    margin: 10px 0;
+    border-radius: 8px;
+    text-transform: uppercase;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper {
+    border-radius: 8px;
+    height: 322px;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper .swiper-wrapper {
+    height: 361px;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper .swiper-wrapper .swiper-slide img {
+    width: 100%;
+    object-fit: cover;
+    height: auto;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination {
+    position: relative;
+    margin: 25px 0 20px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination .swiper-pagination-bullet {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination .swiper-pagination-bullet-active {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-2 {
+    position: relative;
+    margin: 25px 0 20px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-2 .swiper-pagination-bullet {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-2 .swiper-pagination-bullet-active {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-3 {
+    position: relative;
+    margin: 25px 0 20px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-3 .swiper-pagination-bullet {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-3 .swiper-pagination-bullet-active {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-4 {
+    position: relative;
+    margin: 25px 0 20px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-4 .swiper-pagination-bullet {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-4 .swiper-pagination-bullet-active {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-5 {
+    position: relative;
+    margin: 25px 0 20px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-5 .swiper-pagination-bullet {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-5 .swiper-pagination-bullet-active {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-6 {
+    position: relative;
+    margin: 25px 0 20px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-6 .swiper-pagination-bullet {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-6 .swiper-pagination-bullet-active {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-7 {
+    position: relative;
+    margin: 25px 0 20px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-7 .swiper-pagination-bullet {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-7 .swiper-pagination-bullet-active {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-8 {
+    position: relative;
+    margin: 25px 0 20px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-8 .swiper-pagination-bullet {
+    background: #9a0808;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-8 .swiper-pagination-bullet-active {
+    background: #9a0808;
   }
 }
