--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -215,9 +215,9 @@ body {
         top: 0;
         margin-top: 120px;
         flex: 0 0 auto;
-        width: 27%;
+        width: 100%;
         display: flex;
-        max-width: 100%;
+        max-width: 360px;
         padding-right: calc(var(--bs-gutter-x) * 0.5);
         padding-left: calc(var(--bs-gutter-x) * 0.5);
       }
@@ -491,8 +491,7 @@ body {
                     }
                   }
 
-                  .share {
-                  }
+                  
                 }
               }
             }
@@ -765,8 +764,7 @@ body {
                     }
                   }
 
-                  .share {
-                  }
+                  
                 }
               }
             }
@@ -993,8 +991,7 @@ body {
                     }
                   }
 
-                  .share {
-                  }
+                  
 
                   .wrap-kategori {
                     a {
@@ -1406,9 +1403,9 @@ body {
           top: 0;
           margin-top: 120px;
           flex: 0 0 auto;
-          width: 25%;
+          width: 100% !important;
           display: flex;
-          max-width: 100%;
+          max-width: 360px !important;
           padding-right: calc(var(--bs-gutter-x) * 0.5);
           padding-left: calc(var(--bs-gutter-x) * 0.5);
         }
