--- a/yamaha-youth/assets/css/miss-classy.css
+++ b/yamaha-youth/assets/css/miss-classy.css
@@ -359,6 +359,9 @@
 #miss-classy .modal-footer {
   border: none;
 }
+#miss-classy .modal-content {
+  border-radius: 1.5rem 1.5rem 0 0;
+}
 
 @media (max-width: 1200px) {
   #miss-classy .vote-miss-classy-card {
