--- a/yamaha-youth/assets/css/wp-school-competition.css
+++ b/yamaha-youth/assets/css/wp-school-competition.css
@@ -32,10 +32,11 @@
 }
 
 .sc-city-image {
-  width: 100%;
-  min-width: 130px;
-  max-width: 182px;
-  height: auto;
+  width: 184px;
+  height: 184px;
+  object-fit: cover;
+  border-radius: 20px;
+  border: 4px solid #ffffff;
 }
 
 @media (max-width: 997px) {
