--- a/festivalcreative-lps/src/css/snk.css
+++ b/festivalcreative-lps/src/css/snk.css
@@ -41,10 +41,12 @@
 
 ol {
   padding-left: 1.3rem;
+  color: #464D5A;
 }
 ul {
   padding-left: 0;
   list-style: inside;
+  color: #464D5A;
 }
 
 @media (max-width: 992px) {
