--- a/festivalcreative-lps/src/css/navbar.css
+++ b/festivalcreative-lps/src/css/navbar.css
@@ -17,6 +17,11 @@ html {
   box-shadow: 0 9px 14px rgb(0, 0, 0, 0.35);
   top: 10px;
   font-family: "montserat-regular";
+  font-size: 14px;
+}
+
+#nav-bar .navbar-brand img{
+  max-width: 120px;
 }
 
 .navbar-nav a {
@@ -27,6 +32,7 @@ html {
   color: white;
   font-weight: 500;
   background-color: #fd8b00;
+  font-size: 14px;
 }
 
 .nav-link:hover,
@@ -61,6 +67,27 @@ html {
   background-color: #ffffff;
 }
 
+#nav-bar .dropdown-menu{
+  border-radius: 20px;
+  border: 1px solid var(--Strok-Oren-Terang, #FFC78F);
+  background: #F8F8F8;
+  font-size: 14px;
+  margin-top: 25px;
+}
+
+#nav-bar .dropdown-item:hover{
+  background: none;
+}
+
+#nav-bar .dropdown-toggle::after{
+  display: none;
+}
+
+@media (max-width: 576px){
+  #nav-bar .dropdown-menu{
+    margin-top: 10px;
+  }
+}
 @media (max-width: 992px) {
   .navbar-toggler[aria-expanded="true"] .bar:nth-child(2) {
     opacity: 0;
